@@ -40,6 +40,10 @@ public:
   static float delay() { return delay_; }
   /**    Sets the tooltip delay. The default delay is 1.0 seconds.  */
   static void delay(float f) { delay_ = f; }
+  /**    Gets the time unitl an open tooltip hides again. The default delay is 12.0 seconds.  */
+  static float hidedelay() { return hidedelay_; }
+  /**    Sets the time unitl an open tooltip hides again. The default delay is 12.0 seconds.  */
+  static void hidedelay(float f) { hidedelay_ = f; }
   /**
     Gets the tooltip hover delay, the delay between tooltips.
     The default delay is 0.2 seconds.
@@ -105,6 +109,7 @@ private:
 
 private:
   static float delay_; //!< delay before a tooltip is shown
+  static float hidedelay_; //!< delay until tooltip is closed again
   static float hoverdelay_; //!< delay between tooltips
   static Fl_Color color_;
   static Fl_Color textcolor_;
